bookstack/00-bookstack-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstack
  labels:
    istio-injection: enabled
