bookstack/bookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bookstack
  labels:
    app: bookstack
spec:
  ports:
    - port: 3306
  selector:
    app: bookstack
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: bookstack
  labels:
    app: bookstack
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookstack
      tier: mysql
  template:
    metadata:
      labels:
        app: bookstack
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        #args:
        #- --skip-grant-tables
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: bookstack
    tier: bookstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookstack
      tier: bookstack
  template:
    metadata:
      labels:
        app: bookstack
        tier: bookstack
    spec:
      containers:
      - image: solidnerd/bookstack:0.25.5
        name: bookstack
        ports:
        - containerPort: 80
          name: bookstack
