bookstack/bookstack-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookstack
  namespace: bookstack
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.wiki.lukeaddison.co.uk/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.wiki.lukeaddison.co.uk/oauth2/start?rd=https://$host$request_uri"
spec:
  tls:
  - secretName: bookstack-tls
    hosts:
    - wiki.lukeaddison.co.uk
  rules:
  - host: wiki.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: bookstack
          servicePort: 80
