bookstack/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookstack
  namespace: bookstack
spec:
  hosts:
  - wiki.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway-internal
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: bookstack
